--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,6 @@ ul li {
   grid-template-areas: 'img1 img2 img3 .';
   justify-content: center;
   align-items: space-between;
-  
 }
 .imgContainer img {
   width: 350px;
@@ -138,4 +137,12 @@ ul li {
 .slided {
   height: 100%;
   width: 100%;
+}
+
+.leftside {
+  justify-content: center;
+  align-items: center;
+  font-size: 10px;
+  width: 120px;
+  margin-top: 60px;
 }
